feat: update ipynb

--- a/demo/predict-taxi-trip-duration-nb/develop_ml_application_tour.ipynb
+++ b/demo/predict-taxi-trip-duration-nb/develop_ml_application_tour.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd demo && sh train.sh"
+    "!cd demo && python3 train.py ./fe.sql /tmp/model.txt"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd demo && sh start_predict_server.sh"
+    "!cd demo && sh start_predict_server.sh ./fe.sql 8887 /tmp/model.txt"
    ]
   },
   {
